html text and demo css

--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-  <script src="aqueous.js"></script>
-  
-<meta name="description" content="Aqeous -- Fluid Div Editor" />
-<meta charset=utf-8 />
-<title>Aqueous Designer</title>
-</head>
-<body>
-  <div class="aqueous"></div>
+  <head>
 
-  <script type="text/javascript">
-  	$('.aqueous').aqueous({height : '300px', width : '600px'});
-  </script>
-  
-</body>
+    <!-- demo css :: remove when installed :: -->
+    <link href="css/demo.css" rel="stylesheet" type="text/css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script src="aqueous.js"></script>
+    
+    <meta name="description" content="Aqeous -- Fluid Div Editor" />
+    <meta charset=utf-8 />
+    <title>Aqueous Designer by Shuttercard</title>
+  </head>
+  <body>
+    <div class="wrapper">
+
+      <h1>Aqueous HTML Designer</h1>
+      <div class="aqueous"></div>
+    </div>
+
+    <script type="text/javascript">
+    	$('.aqueous').aqueous({height : '300px', width : '600px'});
+    </script>
+    
+  </body>
 </html>
