--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   <body>
     <div class="wrapper">
 
-      <h1>Aqueous HTML Designer</h1>
+      <h1>Aqueous HTML5 Designer <sub>{alpha}</sub></h1>
+
+      <p id="intro">Aqueous is a HTML5 <strong>designer</strong>. Where HTML text <strong>editors</strong> like TinyMCE or CKeditor aim at
+        allowing the user to build HTML pages focusing on <strong>content structure</strong>, Aqueous aims at
+        designing print mediums like business cards or t-shirts using the HTML structure focusing on
+        <strong>content placement</strong> with movable blocks that maintain the formatting state.</p>
       <div class="aqueous"></div>
     </div>
 
